# mdsmith

./: .gitattributes  .gitignore  .golangci.yml  .mdsmith.pinned.yml  .mdsmith.yml  .tidymark.yml  AGENTS-PR-FIXUP.md  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  PLAN.md  README.md  SECURITY.md  action.yml  codecov.yml  coverage_rule.out  demo.tape  go.mod  go.sum  rule-directory.md  test_config.yml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/skills/: pr-fixup.md
.github/: AGENTS-PR-FIXUP.md  CLAUDE.md  CODEOWNERS  copilot-instructions.md  copilot-pr-fixup.md  dependabot.yml
.github/scripts/: check-secret-rotations.py  check-secret-rotations.ts  package.json  record-rotation.py  record-rotation.ts
.github/workflows/: action-smoke.yml  benchmark.yml  ci.yml  cuelite-fuzz.yml  demo.yml  e2e.yml  marketplace-major-tag.yml  mdsmith-check.yml  merge-queue.yml  pages.yml  record-secret-rotation.yml  refresh-benchmark.yml  release.yml  secret-rotation-reminder.yml  security-audit-sarif.yml  skill-eval.yml
.obsidian/: graph.json  workspace.json
archetypes/: README.md
archetypes/generated-section/: README.md
assets/benchmarks/: headline.fragment.md  results.fragment.md
assets/benchmarks-drift/: headline.fragment.md  results.fragment.md
background/: markdown-linters.md
cmd/corpusctl/: main.go  main_test.go  measure.go  measure_test.go
cmd/mdsmith-release/: covmerge.go  main.go  main_test.go  obsidianzip.go  pgo.go  releasegates_test.go  releasesmoke_test.go  sbom.go  sync_channels.go  sync_channels_test.go  sync_coverage.go  sync_coverage_test.go  sync_messaging.go  sync_messaging_test.go  sync_parity.go  sync_parity_test.go  testsummary.go  testsummary_test.go  triggerguard.go  triggerguard_test.go
cmd/mdsmith-secreview/: main.go  (+1 more)
guides/: metrics-tradeoffs.md
plan/: 01_skeleton-and-core-types.md  02_config-loading.md  03_lint-engine.md  04_output-formatters.md  05_raw-text-rules.md  06_heading-rules.md  07_code-block-rules.md  08_list-and-url-rules.md  09_line-length-rule.md  100_build-config-and-mds040.md  101_build-directive-mds039.md  102_build-subcommand.md  103_build-staleness-and-deps.md  104_build-lifecycle-hooks.md  105_no-inline-html.md  106_emphasis-style.md  107_no-reference-style.md  108_horizontal-rule-style.md  109_list-marker-style.md  10_fix-mode.md  110_ordered-list-numbering.md  111_ambiguous-emphasis.md  112_flavor-profiles.md  113_user-defined-profiles.md  114_mds034-message-and-flavor-vs-rule-docs.md  115_builder-execution-in-fix.md  116_build-execution-ux.md  117_build-execution-hardening.md  11_polish-and-integration.md  120_glob-unification.md  121_vscode-integration.md  122_vscode-hover-and-palette.md  124_no-space-in-code-spans.md  125_no-space-in-link-text.md  126_proper-names.md  127_single-h1.md  128_no-undefined-reference-labels.md  129_no-unused-link-definitions.md  12_generated-section.md  130_binary-distribution-and-versioning.md  (+290 more)
python/: README.md  pyproject.toml
python/mdsmith/: __init__.py  __main__.py
scripts/: build-npm-platforms.sh  build-wheels.sh  check-versions.sh  gen-feature-terminal.sh  merge-driver-catalog.sh  set-version.sh  setup-merge-drivers.sh
tools/: go.mod  go.sum
website/: README.md  build-output.mdsmith.yml  hugo.toml
(+2100 files in other folders)
