[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mdsmith"
version = "0.0.0-dev"
description = "Fast, auto-fixing Markdown linter and formatter for docs, READMEs, and AI-generated content."
readme = "README.md"
license = "MIT"
authors = [
  { name = "Jens-Christian Eduden", email = "jens-christian@eduden.de" },
]
requires-python = ">=3.9"
keywords = ["markdown", "linter", "formatter", "mdsmith", "docs"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Go",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Text Processing :: Markup :: Markdown",
]

[project.scripts]
mdsmith = "mdsmith.__main__:main"

[project.urls]
Homepage = "https://github.com/jeduden/mdsmith"
Source = "https://github.com/jeduden/mdsmith"
Issues = "https://github.com/jeduden/mdsmith/issues"

[tool.hatch.build.targets.wheel]
packages = ["mdsmith"]
# scripts/build-wheels.sh stages the prebuilt binary under
# mdsmith/_bin/ before invoking `python -m build`. include the
# whole `_bin/` tree (binary + a marker file describing the wheel
# tag's platform) regardless of what's checked in.
artifacts = [
  "mdsmith/_bin/mdsmith",
  "mdsmith/_bin/mdsmith.exe",
]

[tool.hatch.build.targets.wheel.force-include]
"mdsmith/_bin" = "mdsmith/_bin"
