
[build-system]
  build-backend = "hatchling.build"
  requires = ["hatchling"]

[project]
  classifiers = ["Development Status :: 4 - Beta", "Environment :: Console", "Intended Audience :: Developers", "License :: OSI Approved :: MIT License", "Operating System :: MacOS", "Operating System :: Microsoft :: Windows", "Operating System :: POSIX :: Linux", "Programming Language :: Go", "Programming Language :: Python :: 3", "Topic :: Software Development :: Documentation", "Topic :: Software Development :: Quality Assurance", "Topic :: Text Processing :: Markup :: Markdown"]
  description = "Write content; mdsmith keeps your Markdown neat and consistent — fast enough to stay out of your way. Auto-fix on save, instant navigation, cross-file integrity, and generated sections that keep a single source of truth in sync across files and pipelines."
  keywords = ["markdown", "linter", "formatter", "mdsmith", "docs"]
  license = "MIT"
  license-files = ["LICENSE"]
  name = "mdsmith"
  readme = "README.md"
  requires-python = ">=3.9"
  version = "0.0.0-dev"

  [project.scripts]
    mdsmith = "mdsmith.__main__:main"

  [project.urls]
    Homepage = "https://mdsmith.dev"
    Issues = "https://github.com/jeduden/mdsmith/issues"
    Source = "https://github.com/jeduden/mdsmith"

[tool]

  [tool.hatch]

    [tool.hatch.build]

      [tool.hatch.build.targets]

        [tool.hatch.build.targets.wheel]
          artifacts = ["mdsmith/_bin/mdsmith", "mdsmith/_bin/mdsmith.exe"]
          packages = ["mdsmith"]
